--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
   </head>
   <body>
     <!-- Main header + Nav Toggle -->
-    <nav class="navbar mast" role="navigation">
+    <nav class="navbar" role="navigation">
       <div class="container-fluid">
-        <div class="navbar-header">
+      <!-- Logo for ipad -->
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12 visible-sm">
+            <a class="logo navbar-brand" href="#"><img src="assets/logo-dark.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px"></a>
+          </div>
+        </div>
+      </div>
+        <div class="navbar-header mast">
           <div class="row">
-            <a class="logo navbar-brand" href="#"><img src="assets/logo.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px" class="navbar-left col-xs-10"></a>
+            <a class="logo navbar-brand" href="#"><img src="assets/logo.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px" class="navbar-left col-xs-10 hidden-sm"></a>
             <button type="button" class="navbar-toggle menu-glyph navbar-right col-xs-2" data-toggle="collapse" data-target="#main-menu">
-              <span class="glyphicon glyphicon-th-list "></span>
+              <span class="glyphicon glyphicon-th-list menu"></span>
             </button>
 
           </div>
@@ -32,13 +40,111 @@
     </nav>
     <!-- Navigation Options -->
     <div class="collapse navbar-collapse" id="main-menu">
-      <ul class="navbar-nav nav navbar-right">
-        <li class="">Booking</li>
-        <li class="">Travel Blog</li>
-        <li class="">Frequent Flyer</li>
-        <li class="">Our Pledge</li>
+      <ul class="navbar-nav nav navbar-right drop-menu hidden-sm hidden-md hidden-lg">
+        <li>
+          <div class="container-fluid">
+            <div id="carousel-index" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="item">
+                  <img class="img-responsive" width="100%" src="assets/slider/4.jpg" alt="slider1">
+                <div class="carousel-caption">
+                </div>
+              </div>
+              <div class="item">
+                <img class="img-responsive" width="100%" src="assets/slider/5.jpg" alt="slider2">
+                <div class="carousel-caption">
+                </div>
+              </div>  
+              <div class="item active">
+                <img class="img-responsive" width="100%" src="assets/slider/6.jpg" alt="slider3">
+                <div class="carousel-caption">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </li>
+        <li class=""><div class="drop-menu1"><a href="booking.html">Booking</a></div></li>
+        <li class=""><div class="drop-menu2"><a href="blog.html">Travel Blog</a></div></li>
+        <li class=""><div class="drop-menu3"><a href="flyer.html">Frequent Flyer</a></div></li>
+        <li class=""><div class="drop-menu4"><a href="pledge.html">Our Pledge</a></div></li>
       </ul>
     </div>
+    <!-- Testing Text -->
+    <h1 class="text-center"><span class="bold">Welcome to Airfinity Airlines</span></h1>
+    <!-- Slider -->
+    <!-- 
+    <div class="container-fluid">
+      <div id="carousel-index" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="item active">
+            <img class="img-responsive" src="assets/slider/1.jpg" alt="slider1">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="assets/slider/2.jpg" alt="slider2">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="assets/slider/3.jpg" alt="slider3">
+          <div class="carousel-caption">
+          </div>
+        </div>
+      </div> 
+      -->
+      <!-- Index Content | forms -->
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <form role="index-info">
+              <div class="form-group">
+                <input type="string" class="form-control text-input" id="index-departure" placeholder="Departure City">
+              </div>
+              <div class="form-group">
+                <input type="string" class="form-control text-input" id="index-destination" placeholder="Destination City">
+              </div>
+              <button type="button" class="col-xs-12 text-input btn btn-success"><span class="glyphicon glyphicon-chevron-right"></span></button>
+            </form>
+          </div>
+        </div>
+        <div class="spacer"></div>
+        <!-- Social Media testimony thing -->
+        <div class="container-fluid">
+          <div id="carousel-index" class="carousel slide" data-ride="carousel">
+            <div class="testimony carousel-inner">
+              <div class="item active">
+                <div class="row">
+                  <div class="col-xs-4">
+                    <img src="assets/soc_m.jpg" class="img-responsive img-thumbnail" alt="Mister Fly">
+                  </div>
+                  <div class="col-xs-8">
+                    <blockquote class="blockquote-reverse">
+                      <p>Milshk lo-fi beard chambray single-origin coffee sustainable aesthetic bitters Shoreditch High life sriracha.</p>
+                      <footer>That Guy <cite title="Source Title">Mister Fly</cite></footer>
+                    </blockquote>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="row">
+                  <div class="col-xs-4">
+                    <img src="assets/soc_d.gif" class="img-responsive img-thumbnail" alt="Master Doge">
+                  </div>
+                  <div class="col-xs-8">
+                    <blockquote class="blockquote-reverse">
+                      <p>Much Flight, Very Price, So Fly</p>
+                      <footer><cite title="Source Title">Master Doge</cite></footer>
+                    </blockquote>
+                  </div>
+                </div>
+                <div class="spacer"></div>
+              </div>
+            </div>
+          </div> 
+        
+      </div>
 
 
     <script src="js/jquery-1.11.1.min.js"></script>
