--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,126 @@
     </div>
     <h1 class="text-center bold">Travel Blog For Years</h1>
     <div class="spacer"></div>
-    <!-- blog posts here -->
+    <!-- Mobile blog posts here -->
+    <div class="container visible-xs">
+      <div class="row">
+        <div class="col-xs-12">
+          <button type="button" class="btn btn-lg btn-block blog_button" data-toggle="collapse" data-target="#blog-post1">
+            <!-- Blog post Pic -->
+            <div class="col-xs-6 col-xs-pull-1 blog_img">
+              <img class="img-rounded img-responsive" src="assets/blog1.jpg">
+            </div>
+            <div class="col-xs-6 col-xs-pull-2">
+              <p class="blog_thumb">
+                <span class="bold">Etsy keytar <br>stumptown</span><br> 
+                 Shoreditch, a bird on <br>it organic fingerstache <br>shabby chic 
+                ugh.
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-xs-1 col-xs-offset-10">
+                <span class="glyphicon glyphicon-chevron-down"></span>
+              </div>
+            </div>
+          </button>
+          <div class="spacerHalf"></div>
+          <!--Blog post 1 -->
+          <div id="blog-post1" class="collapse row">
+            <div class="container">
+              <div class="row">
+                <img class="col-xs-4" src="assets/blog4.jpg">
+                <img class="col-xs-4" src="assets/blog1.jpg">
+                <img class="col-xs-4" src="assets/blog2.jpg">
+                <div class="spacer"></div>
+                <div class="col-xs-12">
+                  <p>
+                      But generally it feels a little slapdash furthermore we would recommend this phone if you wanted this sort of thing on if you want an Android phone, this might just be your best bet, above all might be better, for example makes compromises but better than some but not as good as others in my opinion just about the best.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Blog Post1 end -->
+           <button type="button" class="btn btn-lg btn-block blog_button" data-toggle="collapse" data-target="#blog-post2">
+            <!-- Blog post Pic -->
+            <div class="col-xs-6 col-xs-pull-1 blog_img">
+              <img class="img-rounded img-responsive" src="assets/blog2.jpg">
+            </div>
+            <div class="col-xs-6 col-xs-pull-2">
+              <p class="blog_thumb">
+                <span class="bold">Etsy keytar <br>stumptown</span><br> 
+                 Shoreditch, a bird on <br>it organic fingerstache <br>shabby chic 
+                ugh.
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-xs-1 col-xs-offset-10">
+                <span class="glyphicon glyphicon-chevron-down"></span>
+              </div>
+            </div>
+          </button>
+          <div class="spacerHalf"></div>
+          <!--Blog post 2 -->
+          <div id="blog-post2" class="collapse row">
+            <div class="container">
+              <div class="row">
+                <img class="col-xs-4" src="assets/blog4.jpg">
+                <img class="col-xs-4" src="assets/blog1.jpg">
+                <img class="col-xs-4" src="assets/blog2.jpg">
+                <div class="spacer"></div>
+                <div class="col-xs-12">
+                  <p>
+                      But generally it feels a little slapdash furthermore we would recommend this phone if you wanted this sort of thing on if you want an Android phone, this might just be your best bet, above all might be better, for example makes compromises but better than some but not as good as others in my opinion just about the best.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Blog Post2 end -->
+           <button type="button" class="btn btn-lg btn-block blog_button" data-toggle="collapse" data-target="#blog-post3">
+            <!-- Blog post Pic -->
+            <div class="col-xs-6 col-xs-pull-1 blog_img">
+              <img class="img-rounded img-responsive" src="assets/blog4.jpg">
+            </div>
+            <div class="col-xs-6 col-xs-pull-2">
+              <p class="blog_thumb">
+                <span class="bold">Lorem Ipsum<br>stumptown</span><br> 
+                 Shoreditch, a bird on <br>it organic fingerstache <br>shabby chic 
+                ugh.
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-xs-1 col-xs-offset-10">
+                <span class="glyphicon glyphicon-chevron-down"></span>
+              </div>
+            </div>
+          </button>
+          <div class="spacerHalf"></div>
+          <!--Blog post 3 -->
+            <div id="blog-post3" class="collapse row">
+            <div class="container">
+              <div class="row">
+                <img class="col-xs-4" src="assets/blog4.jpg">
+                <img class="col-xs-4" src="assets/blog1.jpg">
+                <img class="col-xs-4" src="assets/blog2.jpg">
+                <div class="spacer"></div>
+                <div class="col-xs-12">
+                  <p>
+                      But generally it feels a little slapdash furthermore we would recommend this phone if you wanted this sort of thing on if you want an Android phone, this might just be your best bet, above all might be better, for example makes compromises but better than some but not as good as others in my opinion just about the best.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Blog Post3 end -->
+          <div class="spacer"></div>
+        </div>        
+      </div>
+    </div>
+
+
+
+
 
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
