--- a/booking.html
+++ b/booking.html
@@ -69,16 +69,16 @@
                   <p class="vert_bot col-xs-6">From</p>
                   <h2 class="col-xs-6">Date</h2>
                 </div>
-                <input type="string" class="form-control text-input" id="booking-departure" placeholder="Departure City">
+                <input type="date" class="form-control text-input" id="booking-date-from" placeholder="Date to Depart">
                 <p>To</p>
-                <input type="string" class="form-control text-input" id="booking-departure" placeholder="Destination City">
+                <input type="date" class="form-control text-input" id="booking-date-to" placeholder="Date to Return">
               </div>
               <!-- Section -->
               <div class="form-group">
                 <h2>Rental</h2>
-                <input type="string" class="form-control text-input" id="booking-departure" placeholder="Departure City">
+                <input type="string" class="form-control text-input" id="booking-vehicle" placeholder="Rental Type">
                 <p>For</p>
-                <input type="string" class="form-control text-input" id="booking-departure" placeholder="Destination City">
+                <input type="string" class="form-control text-input" id="booking-rental-period" placeholder="Rental period">
               </div>
         <!-- Inputs End and button below -->
               <div class="spacer"></div>
