--- a/flyer_acc.html
+++ b/flyer_acc.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Account Login | Airfinity Airlines</title>
+    <title>Frequent Flyer Miles | Airfinity Airlines</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -47,9 +47,70 @@
         <li class=""><div class="drop-menu4"><a href="pledge.html">Our Pledge</a></div></li>
       </ul>
     </div>
-    <h1 class="text-center">Frequent <span class="bold">Flyer Points</span></h1>
-    <div class="container">
     
+    <div class="container">
+      <!-- Account Login thing -->
+      <div class="row">
+        <div class="col-xs-12">
+          <img class="img-responsive col-xs-3 img-circle" src="assets/mcbag_pro.jpg" alt="account Picture">
+          <p class="col-xs-6 vert-mid">
+            Logged in as:<br>
+            <span class="bold">Travel McBags</span>            
+          </p>
+
+
+        </div>
+        <div><hr></div>
+      </div>
+      <h1 class="text-center">Frequent <span class="bold">Flyer Points</span></h1>
+      <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+          <div class="img-circle flyer_points">
+            <h4>9001 mi</h4>
+          </div>
+        </div>
+        <div class="col-xs-10 col-xs-offest-1">
+          <h3 class=""><span class="bold">Points Expire on:</span><br>2016 - 11 - 20</h3>
+        </div>
+      </div>
+      <div class="row rewards_table ">
+        <div class="col-xs-12">
+          <div class="col-xs-12 rewards_odd">
+            <p>Reward1</p>
+          </div>
+          <div class="col-xs-12 rewards_even">
+            <p>Reward2</p>
+          </div>
+          <div class="col-xs-12 rewards_odd">
+            <p>Reward3</p>
+          </div>
+          <div class="col-xs-12 rewards_even">
+            <p>Reward4</p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="col-xs-12 rewards_odd">
+            <p>Reward5</p>
+          </div>
+          <div class="col-xs-12 rewards_even">
+            <p>Reward6</p>
+          </div>
+          <div class="col-xs-12 rewards_odd">
+            <p>Reward7</p>
+          </div>
+          <div class="col-xs-12 rewards_even">
+            <p>Reward8</p>
+          </div>
+        </div>
+        
+      </div>
+      <div class="spacer"></div>
+
+
+
+
+
+
     </div>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
