--- a/blog.html
+++ b/blog.html
@@ -5,44 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Travel Blog | Airfinity Airlines</title>
-
+    <link rel="icon" href="assets/favicon.png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   </head>
   <body>
     <!-- Main header + Nav Toggle -->
-    <nav class="" role="navigation">
+    <nav class="navbar margin_nobot" role="navigation">
       <div class="container-fluid no_pad">
       <!-- Menu for Desktop -->
-        <div class="mast-md navbar visible-lg visible-md">
-          <a class="logo logo-md navbar-brand" href="index.html"><img src="assets/logo.svg" alt="Airfinity Airlines" height="70px"  class="" role="logo" ></a>
-          <div class="row">
-            <div class="col-md-6 col-md-push-3 deco_none sm-menu">
-              <a href="booking.html"><div class="col-md-2"><p>Booking</p></div></a>
-              <a href="blog.html"><div class="col-md-2 sm-menu-active"><p>Travel Blog</p></div></a>
-              <a href="flyer.html"><div class="col-md-2 "><p>Frequent Flyer</p></div></a>
-              <a href="pledge.html"><div class="col-md-2"><p>Our Pledge</p></div></a>
-            </div>
+        <div class="mast-md navbar row row-fix visible-lg visible-md">
+          <a class="logo col-md-4 " href="index.html"><img src="assets/logo.svg" class="logo-md" alt="Airfinity Airlines"></a>
+          <div class="row row-fix col-md-8 deco_none sm-menu md-menu">
+            <a href="booking.html" class="col-md-3"><div><p>Booking</p></div></a>
+            <a href="#" class="col-md-3"><div class="sm-menu-active"><p>Travel Blog</p></div></a>
+            <a href="flyer.html" class="col-md-3"><div><p>Frequent Flyer</p></div></a>
+            <a href="pledge.html" class="col-md-3"><div><p>Our Pledge</p></div></a>
           </div>
         </div>
       <!--Menu for ipad -->
-        <div class="row visible-sm ">
+        <div class="row row_fix visible-sm">
           <div class="col-sm-5 col-sm-push-3">
-            <a class="logo logo-ipad navbar-brand" href="index.html"><img src="assets/logo-dark.svg" alt="Airfinity Airlines"  class="text-center" role="logo" ></a>
+            <a class="logo logo-ipad" href="index.html"><img src="assets/logo-dark.svg" alt="Airfinity Airlines"  class="text-center"></a>
           </div> 
         </div>
-        <div class="row col-sm-12 mast visible-sm">
+        <div class="row row_fix col-sm-12 mast visible-sm">
           <div class="col-sm-3">
             <a href="booking.html"><p class="sm-menu">Booking</p></a>
           </div>
           <div class="col-sm-3">
-            <a href="blog.html"><p class="sm-menu sm-menu-active">Travel Blog</p></a>
+            <a href="#"><p class="sm-menu sm-menu-active">Travel Blog</p></a>
           </div>
           <div class="col-sm-3">
             <a href="flyer.html"><p class="sm-menu">Frequent Flyer</p></a>
@@ -54,13 +50,12 @@
       </div>
       <!-- Menu for Mobile -->
       <div class="navbar-header mast visible-xs">
-          <div class="row">
-            <a class="logo navbar-brand" href="index.html"><img src="assets/logo.svg" alt="Airfinity Airlines" role="logo" width="250px" height="50px" class="navbar-left col-xs-10 hidden-sm"></a>
-            <button type="button" class="navbar-toggle menu-glyph navbar-right col-xs-4" data-toggle="collapse" data-target="#main-menu">
-              <span class="glyphicon glyphicon-th-list menu"></span>
-            </button>
-
-          </div>
+        <div class="row row_fix">
+        <!-- Row adds up to 11 due to pushing error -->
+          <a class="col-xs-8" href="index.html"><img src="assets/logo.svg" alt="Airfinity Airlines" class="logo img-responsive hidden-sm"></a>
+          <button type="button" class="navbar-toggle menu-glyph navbar-right col-xs-3" data-toggle="collapse" data-target="#main-menu">
+            <span class="glyphicon glyphicon-th-list"></span>
+          </button>
         </div>
       </div>
     </nav>
@@ -68,36 +63,38 @@
     <div class="collapse navbar-collapse" id="main-menu">
       <ul class="navbar-nav nav navbar-right drop-menu hidden-sm hidden-md hidden-lg">
         <li>
-          <div class="no_pad container-fluid">
-          <div class="row">
-            <div id="carousel-index" class="carousel slide" data-ride="carousel">
+          <div class="container-fluid no_pad">
+            <div id="carousel-index" class="carousel slide " data-ride="carousel">
               <div class="carousel-inner">
+                <div class="item active">
+                  <img class="img-responsive" src="assets/slider/1.jpg" alt="slider1">
+                </div>
                 <div class="item">
-                  <img class="img-responsive" width="100%" src="assets/slider/4.jpg" alt="slider1">
-                <div class="carousel-caption">
+                  <img class="img-responsive" src="assets/slider/2.jpg" alt="slider2">
+                </div>  
+                <div class="item">
+                  <img class="img-responsive" src="assets/slider/3.jpg" alt="slider3">
                 </div>
-              </div>
-              <div class="item">
-                <img class="img-responsive" width="100%" src="assets/slider/5.jpg" alt="slider2">
-                <div class="carousel-caption">
+                <div class="item">
+                  <img class="img-responsive" src="assets/slider/4.jpg" alt="slider4">
                 </div>
-              </div>  
-              <div class="item active">
-                <img class="img-responsive" width="100%" src="assets/slider/6.jpg" alt="slider3">
-                <div class="carousel-caption">
+                <div class="item">
+                  <img class="img-responsive" src="assets/slider/5.jpg" alt="slider5">
+                </div>
+                <div class="item">
+                  <img class="img-responsive" src="assets/slider/6.jpg" alt="slider6">
                 </div>
               </div>
             </div>
           </div>
-          </div>
-
         </li>
         <li class=""><div class="drop-menu1"><a href="booking.html">Booking</a></div></li>
-        <li class=""><div class="drop-menu2 drop-menu-active"><a href="blog.html">Travel Blog</a></div></li>
+        <li class=""><div class="drop-menu2 drop-menu-active"><a href="#">Travel Blog</a></div></li>
         <li class=""><div class="drop-menu3"><a href="flyer.html">Frequent Flyer</a></div></li>
         <li class=""><div class="drop-menu4"><a href="pledge.html">Our Pledge</a></div></li>
       </ul>
     </div>
+
     <h1 class="text-center bold">Travel Blog For Years</h1>
     <div class="spacer"></div>
     <!-- Mobile blog posts here -->
